# shed

./: .hgignore  .shed  Cargo.toml  build.rs  cfg.ron  config.ron  default.env  makefile  readme  readme.org  rustfmt.toml
.cargo/: config.toml
etc/: _shc  _shc.ps1  shc.bash
lib/: Cargo.toml  cli.rs
lib/src/: app.rs  cfg.rs  lib.rs  tests.rs
lisp/: shed.el
src/: app.rs  cli.rs  coding.rs  config.rs  daemon.rs  dmc.rs  lib.rs  main.rs  repl.rs  server.rs  stash.rs  store.rs  tests.rs  ui.rs  web.rs
src/repl/: bqn.rs  dmc.rs  python.rs
src/web/: client.rs  server.rs
